--- a/style.css
+++ b/style.css
@@ -31,8 +31,8 @@
 }
 
 .imgPrincipal {
-    width: 100%;
-    height: 75%;
+    width: auto;
+    height: 100%;
     object-position:left;
     object-fit:cover;
    
