--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
     justify-content: space-between;
     padding: 10px 10px;
     height: auto;
+    position: fixed;
 }
 
 .buttonMenu{
@@ -84,8 +85,8 @@ h1{
 .imgFlecha{
   height: 20px;
   width: 30px; 
-  
-  
-  
 }
 
+main{
+ height: 100vh;
+}
