--- a/style.css
+++ b/style.css
@@ -1,18 +1,21 @@
-
 /* comienzo de la hoja de estilo de sombrereriamil */
 
 @import url('https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap');
-/*font-family: 'Lovers Quarrel', cursive;*/ 
 
+/*font-family: 'Lovers Quarrel', cursive;*/
 
 .headerS1 {
     display: flex;
     justify-content: space-between;
     padding: 10px 10px;
     height: auto;
+    position: fixed;
+    background-color: white;
+    width: 100%;
+    z-index: 1;
 }
 
-.buttonMenu{
+.buttonMenu {
     border: none;
     background-color: white;
 }
@@ -20,7 +23,6 @@
 .imgMenu {
     width: 34px;
     height: auto;
-   
 }
 
 .imgLogo {
@@ -48,12 +50,12 @@
 .imgPrincipal {
     width: auto;
     height: 100%;
-    object-position:left;
-    object-fit:cover; 
+    object-position: left;
+    object-fit: cover;
     filter: brightness(70%);
 }
 
-h1{
+h1 {
     font-family: 'Lovers Quarrel', cursive;
     font-size: 80px;
     color: white;
@@ -64,14 +66,14 @@ h1{
     padding-right: 20px;
 }
 
-.headerS2{
-    position:relative;
+.headerS2 {
+    position: relative;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    }
+}
 
-.buttonFlecha{
+.buttonFlecha {
     height: 52px;
     width: 52px;
     border-radius: 50%;
@@ -79,13 +81,14 @@ h1{
     border: none;
     background-color: white;
     margin-bottom: 10px;
-    }
-
-.imgFlecha{
-  height: 20px;
-  width: 30px; 
-  
-  
-  
 }
 
+.imgFlecha {
+    height: 20px;
+    width: 30px;
+}
+
+main {
+    height: 100vh;
+    background-color: green;
+}
