--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     justify-content: space-between;
     padding: 10px 10px;
-    height: auto;
+    height: autog;
 }
 
 .buttonMenu{
