--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@
 
 .headerS1 {
     display: flex;
-    justify-content: space-between;
-    padding: 10px 10px;
-    height: auto;
+    align-items:center;
+    justify-content: space-around;
+    height: 10vh;
     position: fixed;
     background-color: white;
-    width: 100%;
+    width: 100vw;
     z-index: 1;
 }
 
@@ -42,7 +42,7 @@
 
 .ctPrincipal {
     width: 100vw;
-    height: 91vh;
+    height: 100vh;
     overflow: hidden;
     position: relative;
 }
