--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@
     justify-content: space-between;
     padding: 10px 10px;
     height: auto;
-    position: fixed;
+    position:fixed;
+    top: 0;
+    z-index:3;
 }
 
 .buttonMenu{
