--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 /* comienzo de la hoja de estilo de sombrereriamil */
 
 @import url('https://fonts.googleapis.com/css2?family=Lovers+Quarrel&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Livvic:wght@400;700&display=swap');
+/*font-family: 'Livvic', sans-serif;*/
 /*font-family: 'Lovers Quarrel', cursive;*/
 
 .headerS1 {
@@ -90,7 +91,8 @@ h1 {
 
 main {
     height: 100vh;
-    background-color: green;
+    padding-top: 10vh;
+
 }
 
 .ctCatalogo {
@@ -98,18 +100,45 @@ main {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: auto;
     gap: 10px;
+    padding:0 8px;
+    padding-right: 8px;
 }
 
 .cartSombrero {
-    background-color: yellow;
+    background-color: #F7CA59;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-}
+    justify-content: flex-start;
+    align-items: center;     
+    box-shadow: 0px 7px 11px rgba(0, 0, 0, 0.15);
+    width: 170px;
+    height: 197px;
+ }
 
 .imgSombrero img {
-    height: 148px;
-    width: 170px;
+    width: 100%;
+  
+}
+
+.textoSombrero{
+    font-size: 1rem;
+    font-family: 'Livvic', sans-serif;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.textoSombrero p:nth-child(2){
+    font-weight: bold;
+}
+
+h2{
+    font-family: 'Livvic', sans-serif;
+    font-size: 1rem;  
+    font-weight: bold;
+    text-align: center;
+    margin-top: auto;
+    padding-bottom: 19px;
+
 }
