--- a/style.css
+++ b/style.css
@@ -142,26 +142,45 @@ h2{
     padding-bottom: 19px;
 }
 
+.ctFicha {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+    height: 70vh;
+    width: 85vw;
+    margin: auto;
+    padding: 6%;
+}
+
+.ctDescripcion {
+    display: flex;
+    flex-direction: column;
+}
+
 .imgCerrar {
     height: 20px;
     width:auto;
+    align-self: flex-end;
 }
 
 h3{
     font-family: 'Livvic', sans-serif;
     font-size: 1rem;  
     font-weight: bold;
-    margin-top: auto;
+    margin-top: 25px;
 }
 
 .txtDescripcion {
     font-family: 'Livvic', sans-serif;
+    margin-top: 25px;
 }
 
 .ctTallas{
     display: flex;
     font-family:'Livvic', sans-serif;
     justify-content: space-between;
+    margin-top: 25px;
 }
 
 .ctTallas div{
@@ -179,8 +198,10 @@ h3{
 }
 
 .ctCaracteristics {
+    margin-top: 25px;
 }
 
 .ctCaracteristics p {
     font-family: 'Livvic', sans-serif;
 }
+
